タイトルに星マークを追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="app">
         <!-- イベント一覧画面 -->
         <div id="event-list" class="screen active">
-            <h1>みんなの注文メモ</h1>
+            <h1>⭐️みんなの注文メモ</h1>
             <button id="new-event" class="btn primary">+ 新しいイベント</button>
             <div id="events-container" class="events-container">
                 <!-- イベント一覧がここに表示されます -->
